[package]
name = "koto_learning"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
directories = "6.0.0"
eframe = "0.32.3"
egui = "0.32.3"
env_logger = "0.11.8"
koto = { version = "0.16.0", default-features = false, features = ["arc", "serde"] }
log = "0.4.28"
once_cell = "1.21.3"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
