[package]
name = "koto_learning"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
directories = "6.0.0"
eframe = "0.32.3"
egui = "0.32.3"
egui_extras = "0.32.3"
env_logger = "0.11.8"
koto = { version = "0.16.0", default-features = false, features = ["arc", "serde"] }
libloading = "0.8.9"
log = "0.4.28"
notify = "6.1.1"
once_cell = "1.21.3"
profiling = "1.0.17"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "ansi"] }

[dev-dependencies]
tempfile = "3.13.0"
